project(Ice9API)
cmake_minimum_required(VERSION 3.0)
find_path(LIBUSB_INCLUDE_DIR libusb.h PATH_SUFFIXES "include" "libusb" "libusb-1.0")
find_library(LIBUSB_LIBRARY usb NAMES usb usb-1.0)
find_path(FTDI_INCLUDE_DIR ftdi.h PATH_SUFFIXES "libftdi1")
find_library(FTDI_LIBRARY ftdi NAMES ftdi ftdi1)
include_directories(BEFORE SYSTEM ${FTDI_INCLUDE_DIR} ${LIBUSB_INCLUDE_DIR})
add_library(ice9 SHARED sram_flash.c mpsse.c ice9.c ftdi_stream_ice9.c)
set_target_properties(ice9 PROPERTIES PUBLIC_HEADER ice9.h)
target_link_libraries(ice9 ${FTDI_LIBRARY} ${LIBUSB_LIBRARY})
install(TARGETS ice9 DESTINATION lib)
install(FILES ice9.h DESTINATION include)
